# EDAF50

./: .gitignore
Project/clientserver/: Makefile  README  README.md  article.cc  article.h  connection.cc  dBinterface.h  database.cc  memorydB.cc  memorydB.h  messagehandler.cc  messagehandler.h  newsclient.cc  newsgroup.cc  newsgroup.h  newsserver.cc
Project/clientserver/src/: Makefile  article.cc  article.h  database.cc  database.h  memorydB.cc  memorydB.h  messagehandler.cc  newsclient.cc  newsgroup.cc  newsgroup.h  newsserverMem.cc
Project/clientserver/test/: Makefile  myclient  myserver
lab1/: Makefile  coding.cc  coding.h  decode.cc  encode.cc  hello.cc  list.cc  ltest.cc  text
lab1/cmake-example/: CMakeLists.txt  main.cc
lab1/cmake-example/testlib/: CMakeLists.txt
lab2/: Makefile  compileDict  compileDict.cc  compileDict.d  dictionary  dictionary.cc  dictionary.d  dictionary.h  myword  myword.txt  spell  spell.d  word.cc  word.h  words  words.txt
lab3/: Makefile  date.cc  date.h  date_test.cc  primes.cc  primes.h  primes_test.cc  tagremover.cc  tagremover.h  tagremover_Test.cc  tostring_test.cc
lab4/bitset/: Makefile  bitreference.cc  bitreference.h  bitset.cc  bitset.h  bitsetiterator.h  bitsettest2.cc
lab4/nameserver/: Makefile  hns.cc  hns.h  mns.cc  mns.h  nstest.cc  umns.cc  umns.h  vns.cc  vns.h
